--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -13,7 +13,7 @@ code = "mi-estancia"
 code = "que-hacer"
 
 [staticMenu staticMenu5]
-code = "pie"
+code = "footer"
 
 [staticMenu staticMenu6]
 code = "redes-sociales"
