--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -17,7 +17,7 @@ code = "mi-estancia"
 code = "que-hacer"
 
 [staticMenu staticMenu5]
-code = "pie"
+code = "footer"
 
 [staticMenu staticMenu6]
 code = "redes-sociales"
@@ -36,7 +36,7 @@ code = "redes-sociales"
         }
 
         $this['event'] = $this->staticApp->eventFindByUrl($this->page->url);
-        
+
         $this['urlPage'] = $this->page->url;
 
         if($this->page->apiBag){
