--- a/themes/default/layouts/publicacion.htm
+++ b/themes/default/layouts/publicacion.htm
@@ -17,7 +17,7 @@ code = "mi-estancia"
 code = "que-hacer"
 
 [staticMenu staticMenu5]
-code = "pie"
+code = "footer"
 
 [staticMenu staticMenu6]
 code = "redes-sociales"
