punto al final en numero de resultados

--- a/themes/default/partials/events.htm
+++ b/themes/default/partials/events.htm
@@ -19,9 +19,9 @@
 
     <div class="search-title-container">
       {% if events|length > 1 %}
-      <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{events|length}} {{ 'eventos que se adaptan ti'|_ }}</p>
+      <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{events|length}} {{ 'eventos que se adaptan ti'|_ }}.</p>
       {% else %}
-       <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{events|length}} {{ 'evento que se adaptan ti'|_ }}</p>
+       <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{events|length}} {{ 'evento que se adaptan ti'|_ }}.</p>
       {% endif %}
     </div>
 
