--- a/themes/default/partials/experiences.htm
+++ b/themes/default/partials/experiences.htm
@@ -18,9 +18,9 @@
 
 	<div class="search-title-container">
 	    {% if experiences|length > 1 %}
-	    	<p class="title-search"> {{ 'Hemos encontrado'|_ }} {{experiences|length}} {{ 'experiencias que se adaptan ti'|_ }}</p>
+	    	<p class="title-search"> {{ 'Hemos encontrado'|_ }} {{experiences|length}} {{ 'experiencias que se adaptan ti'|_ }}.</p>
 	    {% else %}
-	       <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{experiences|length}} {{ 'experiencia que se adapta ti'|_ }}</p>
+	       <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{experiences|length}} {{ 'experiencia que se adapta ti'|_ }}.</p>
 	     {% endif %}
 	</div>
 
