--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -99,7 +99,7 @@ code = "redes-sociales"
       "content": {
         "message": "Este sitio web utiliza cookies, tanto propias como de terceros, para recopilar información estadística sobre su navegación. Si continúa navegando, consideramos que acepta nuestra",
         "dismiss": "Entendido",
-        "link": "política de cookies",
+        "link": "política de cookies.",
         "href": "http://cadizturismo.jekyllme.com/politica-de-cookies"
       }
     })});
