--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3381,3 +3381,10 @@ footer {
     }
   }
 }
+
+.cc-btn {
+  &hover, &:focus, &:active {
+    text-decoration: none !important;
+    outline: none!important;
+  }
+}
