--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3383,7 +3383,7 @@ footer {
 }
 
 .cc-btn {
-  &hover, &:focus, &:active {
+  &:hover, &:focus, &:active {
     text-decoration: none !important;
     outline: none!important;
   }
