--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2496,6 +2496,7 @@ html, body {
 
    .languages {
      visibility: hidden;
+     font-size: 16px !important;
      line-height: 31px !important;
    }
 
