--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2285,7 +2285,7 @@ html, body {
     -webkit-mask-size: 200%; } }
 
 @media (max-width: 920px) and (min-width: 710px) {
-  .separator-menu, .separator-lang, .dis-item {
+  .separator-lang, .dis-item {
     display: none !important; }
   .active-lang {
     visibility: visible !important;
