--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2485,7 +2485,7 @@ html, body {
 
 @media (max-width: 920px) and (min-width: 710px) {
 
-  .separator-menu, .separator-lang, .dis-item {
+  .separator-lang, .dis-item {
    display: none !important; }
 
    .active-lang {
