--- a/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
@@ -109,7 +109,7 @@
                 
                  <!-- Andrés Martínez : Hidden add subpage. Only for Parents
                 -->
-                <?php if (1 == 1 || $fileName == 'municipios' || $fileName == 'playas' || $fileName == 'publicaciones' || $fileName == 'sala-prensa-prensa' || $fileName == 'sala-prensa-reportajes' ) : ?>
+                <?php if ($fileName == 'municipios' || $fileName == 'playas' || $fileName == 'publicaciones' || $fileName == 'sala-prensa-prensa' || $fileName == 'sala-prensa-reportajes' ) : ?>
                     <ul class="submenu">
                         <li>
                             <a
