--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -47,6 +47,11 @@
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 30px #CECECE inset !important; }
 
+.full-legal-container ~ .mini-logo-container img {
+  -webkit-filter: invert(0.6);
+  -moz-filter: invert(0.6);
+  filter: invert(0.6); }
+
 .close-modal {
   position: absolute;
   padding-top: 0px !important;
