--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -58,6 +58,15 @@
     -webkit-box-shadow: 0 0 0 30px #CECECE inset !important;
 }
 
+  .full-legal-container ~ .mini-logo-container {
+    img {
+      -webkit-filter: invert(0.6);
+      -moz-filter: invert(0.6);
+      filter: invert(0.6);
+
+    }
+  }
+
   .close-modal {
     position: absolute;
     padding-top: 0px !important;
