--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -72,7 +72,7 @@ function onStart()
     {% set urlply = this.page.url|split('/playas/') %}
     {% set urlen = this.page.url|split('/espacios-naturales/') %}
    
-    {% if urlmun|length > 1 ||  urlply|length > 1 || urlen|length > 1 %}
+    {% if urlmun|length > 1 or  urlply|length > 1 or urlen|length > 1 %}
     <script>
         var address = "{{this.page.title}}";
     </script>
