--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -182,8 +182,8 @@ layout = "free"
                         <table role="panel" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%;">
                             <tr>
                                 <td width="300" align="center" valign="top" style="padding:10px;">
-                                    <h2 style="text-align:center;">Aquí tienes tu experiencia de “{{experience.title}}”</h2>
-                                    <p style="max-width: 353px;text-align:center;">Te hemos adjuntado un pdf, descárgalo y lleva siempre contigo tu experiencia, te ayudará a planificar mejor tu viaje y a que descubras lo mejor de Cádiz.</p>
+                                    <h2 style="text-align:center;">{{'Aquí tienes tu experiencia de'|_}} “{{experience.title}}”</h2>
+                                    <p style="max-width: 353px;text-align:center;">{{'Te hemos adjuntado un pdf, descárgalo y lleva siempre contigo tu experiencia, te ayudará a planificar mejor tu viaje y a que descubras lo mejor de Cádiz.'|_}}</p>
                                 </td>
                             </tr>
                         </table>
@@ -220,7 +220,7 @@ layout = "free"
                                         <p style="display: inline-block;">
                                             <a href="https://www.pinterest.es/cadizturismo/"><img src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/pinterest-icon.jpg"  alt="cadiz-pinterest"></a>
                                         </p>
-                                        <span class="ask" style="margin-bottom: 80px"> <a href="http://cadizturismo.jekyllme.com/es/necesitas-ayuda"><b>¿Dudas o preguntas?</b></a></span>
+                                        <span class="ask" style="margin-bottom: 80px"> <a href="http://cadizturismo.jekyllme.com/es/necesitas-ayuda"><b>{{'¿Dudas o preguntas?'|_}}</b></a></span>
                                     </div>
                                 </td>
                             </tr>
