--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -52,6 +52,11 @@ input:-webkit-autofill {
   -moz-filter: invert(0.6);
   filter: invert(0.6); }
 
+.mini-logo-container:has( + .full-legal-container) img {
+  -webkit-filter: invert(0.6);
+  -moz-filter: invert(0.6);
+  filter: invert(0.6); }
+
 .close-modal {
   position: absolute;
   padding-top: 0px !important;
