mail url http://cadizturismo.jekyllme.com/es/contacto

--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -220,7 +220,7 @@ layout = "free"
                                         <p style="display: inline-block;">
                                             <a href="https://www.pinterest.es/cadizturismo/"><img src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/pinterest-icon.jpg"  alt="cadiz-pinterest"></a>
                                         </p>
-                                        <span class="ask" style="margin-bottom: 80px"> <a href="http://cadizturismo.jekyllme.com/es/necesitas-ayuda"><b>{{'¿Dudas o preguntas?'|_}}</b></a></span>
+                                        <span class="ask" style="margin-bottom: 80px"> <a href="http://cadizturismo.jekyllme.com/es/contacto"><b>{{'¿Dudas o preguntas?'|_}}</b></a></span>
                                     </div>
                                 </td>
                             </tr>
