--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -56,24 +56,11 @@
 
   input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0 30px #CECECE inset !important;
-}
-
-  .full-legal-container ~ .mini-logo-container {
-    img {
-      -webkit-filter: invert(0.6);
-      -moz-filter: invert(0.6);
-      filter: invert(0.6);
-
-    }
   }
 
-  .mini-logo-container:has(+ .full-legal-container) {
-    img {
-      -webkit-filter: invert(0.6);
-      -moz-filter: invert(0.6);
-      filter: invert(0.6);
-
-    }
+  .made-up-space {
+    height: 168px;
+    background-color: #ACACAC;
   }
 
   .close-modal {
