--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -849,6 +849,9 @@ html, body {
 .field-richeditor .pic-way:before, .field-richeditor .static-header:before, .field-richeditor .somos-section:before, .field-richeditor .ayuda-header:before, .field-richeditor .about-header:before {
   content: none !important; }
 
+.field-richeditor .made-up-space {
+  display: none !important; }
+
 .field-richeditor .somos-section .tagline-container {
   bottom: 40px !important; }
 
@@ -2998,7 +3001,7 @@ footer {
   width: auto;
   max-width: 80%;
   margin: 0px auto;
-  padding-top: 170px;
+  padding-top: 70px;
   padding-bottom: 70px; }
   .aviso-legal-container h1 {
     color: #464646;
