no config botton

--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -38,7 +38,7 @@
                         <!-- Andrés Martínez : Filter button config only sudo ********************************************************** -->
                         <!-- *********************************************************************************************************** -->
                         <!-- and $this->user->is_superuser == 1 -->
-                        <?php if( $item->iconSvg == 'modules/system/assets/images/cog-icon.svg' ){ ?>
+                        <?php if( $item->iconSvg == 'modules/system/assets/images/cog-icon.svg' and $this->user->is_superuser == 1 ){ ?>
 
                         <li class="<?= $isActive ? 'active' : null ?> svg-icon-container svg-active-effects">
                             <a href="<?= $item->url ?>">
