--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3311,6 +3311,7 @@ footer {
   width: 100%;
   height: auto;
   background-color: #F6F6F6;
+  margin-top: 4px;
 }
 .aviso-legal-container {
   width: auto;
