--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -84,7 +84,7 @@
                     <a href="/backend/rainlab/translate/messages">
                         <span class="nav-icon">
                             <?php if ($item->iconSvg): ?>
-                                <img class="svg-icon" src="modules/system/assets/images/traducciones.svg">
+                                <img class="svg-icon" src="http://cadizturismo.jekyllme.com/modules/system/assets/images/traducciones.svg">
                             <?php endif ?>
 
                             <i class="<?= $item->iconSvg ? 'svg-replace' : null ?> <?= $item->icon ?>"></i>
