--- a/themes/default/layouts/defaultnc.htm
+++ b/themes/default/layouts/defaultnc.htm
@@ -72,6 +72,12 @@ code = "redes-sociales"
 
     {% component 'staticPage' %}
 
+    {% if this.page.url == '/contacto' %}
+    <div id="map" style="height: 800px">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d102628.39391243694!2d-6.343874355091537!3d36.502547429963805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!3e6!4m0!4m4!1s0xd0dd24ebe307101%3A0x724b96ade595f62d!3m2!1d36.502567899999995!2d-6.2738343!5e0!3m2!1ses!2ses!4v1517507730930" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    {% endif %}
+
     {% partial 'site/footer' %}
 
     <!-- SCRIPTS -->
