--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -175,7 +175,7 @@ layout = "free"
 
             <!-- Start Grid 2 -->
 
-            <table class="panel" role="panel" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; margin: 0px;" bgcolor="#FFFFFF">
+            <table class="panel" role="panel" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; margin: auto;" bgcolor="#FFFFFF">
                 <tr>
                     <td align="center" valign="top" style="padding:10px;">
 
