--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -49,7 +49,7 @@ input:-webkit-autofill {
 
 .made-up-space {
   height: 160px;
-  background-color: #ACACAC; }
+  background-color: #F5A623; }
 
 .close-modal {
   position: absolute;
