--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -304,6 +304,12 @@ html, body {
   }
  }
 
+ .infoLimit {
+   margin-left: 27px;
+   font-size: 13px;
+   color: #acacac;
+ }
+
 
 .glyphicon-chevron-right {
   background-image: url("../svg/calendar-arrow.svg");
