--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -232,6 +232,11 @@ html, body {
   html ::selection, body ::selection {
     background-color: #FFE8CA; }
 
+.infoLimit {
+  margin-left: 27px;
+  font-size: 13px;
+  color: #acacac; }
+
 .glyphicon-chevron-right {
   background-image: url("../svg/calendar-arrow.svg");
   background-repeat: no-repeat;
