--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -310,6 +310,11 @@ html, body {
    color: #acacac;
  }
 
+ .barraLimit {
+   height: 1px;
+   background-color: #CECECE;
+ }
+
 
 .glyphicon-chevron-right {
   background-image: url("../svg/calendar-arrow.svg");
