--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -237,6 +237,10 @@ html, body {
   font-size: 13px;
   color: #acacac; }
 
+.barraLimit {
+  height: 1px;
+  background-color: #CECECE; }
+
 .glyphicon-chevron-right {
   background-image: url("../svg/calendar-arrow.svg");
   background-repeat: no-repeat;
