--- a/plugins/rainlab/pages/formwidgets/menuitems/partials/_itemlist.htm
+++ b/plugins/rainlab/pages/formwidgets/menuitems/partials/_itemlist.htm
@@ -6,9 +6,9 @@
 
         <?php
           $count = $count+1;
-          if($count == 4){
+          if($count == 4){ ?>
             <div class="barraLimit"></div>
-          }
+        <?php  }
 
         ?>
 
