--- a/plugins/rainlab/pages/formwidgets/menuitems/partials/_itemlist.htm
+++ b/plugins/rainlab/pages/formwidgets/menuitems/partials/_itemlist.htm
@@ -7,7 +7,7 @@
         <?php
           $count = $count+1;
           if($count == 5){ ?>
-            <div class="barraLimit"></div>
+            <!-- <div class="barraLimit"></div> -->
         <?php  }
 
         ?>
