--- a/plugins/rainlab/pages/widgets/eventolist/partials/_items.htm
+++ b/plugins/rainlab/pages/widgets/eventolist/partials/_items.htm
@@ -2,8 +2,8 @@
 <div class="order-container">
   <!-- añadir la clase active-a cuando esté activo -->
   <a class="order-event <?php if($this->activeMenuFilter == 'all'){echo 'active-a';} ?>" href="" data-request='onAllEvents'>Todos</a>
-  <a class="order-event <?php if($this->activeMenuFilter == 'open'){echo 'active-a';} ?>" href="" data-request='onOpenEvents'>Abiertos</a>
-  <a class="order-event <?php if($this->activeMenuFilter == 'closed'){echo 'active-a';} ?>" href="" data-request='onClosedEvents'>Cerrados</a>
+  <a class="order-event <?php if($this->activeMenuFilter == 'open'){echo 'active-a';} ?>" href="" data-request='onOpenEvents'>Próximos</a>
+  <a class="order-event <?php if($this->activeMenuFilter == 'closed'){echo 'active-a';} ?>" href="" data-request='onClosedEvents'>Finalizados</a>
 </div>
 
 
