sort menus at sudo

--- a/plugins/rainlab/pages/widgets/menulist/partials/_items.htm
+++ b/plugins/rainlab/pages/widgets/menulist/partials/_items.htm
@@ -1,6 +1,12 @@
 <?php if ($items): ?>
+
+<?php //echo json_encode($items['donde-ir.yaml']) 
+
+$sItems = [$items['donde-ir.yaml'],$items['que-hacer.yaml'],$items['que-vivir.yaml'],$items['mi-estancia.yaml'],$items['redes-sociales.yaml'],$items['pie.yaml']];  
+
+?>
     <ul>
-        <?php foreach ($items as $item): ?>
+        <?php foreach ($sItems as $item): ?>
             <?php
                 $fileName = $item->getBaseFileName();
                 $dataId = 'menu-'.$this->theme->getDirName().'-'.$fileName;
