--- a/plugins/rainlab/pages/widgets/menulist/partials/_items.htm
+++ b/plugins/rainlab/pages/widgets/menulist/partials/_items.htm
@@ -2,7 +2,7 @@
 
 <?php //echo json_encode($items['donde-ir.yaml']) 
 
-$sItems = [$items['donde-ir.yaml'],$items['que-hacer.yaml'],$items['que-vivir.yaml'],$items['mi-estancia.yaml'],$items['redes-sociales.yaml'],$items['pie.yaml']];  
+$sItems = [$items['donde-ir.yaml'],$items['que-hacer.yaml'],$items['que-vivir.yaml'],$items['mi-estancia.yaml'],$items['redes-sociales.yaml'],$items['footer.yaml']];  
 
 ?>
     <ul>
