--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -773,8 +773,7 @@ html, body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    z-index: 100;
-    border-bottom: 1px solid #979797; }
+    z-index: 100; }
   .icons-row .also-feature {
     display: -webkit-box;
     display: -moz-box;
