--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -773,7 +773,8 @@ html, body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    z-index: 100; }
+    z-index: 100; 
+  }
   .icons-row .also-feature {
     display: -webkit-box;
     display: -moz-box;
