--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -376,7 +376,16 @@ html, body {
   -ms-user-select: none;
   user-select: none;
   width: 20px;
-  height: 15px; }
+  height: 15px;
+  &::before {
+    top: 0;
+    @include transform(rotate(-45deg));
+  }
+  &::after {
+    bottom: 0;
+    @include transform(rotate(45deg));
+  }
+ }
 
 .mobile-toggle .top-bar, .mobile-toggle .middle-bar, .mobile-toggle .bottom-bar {
   width: 20px;
@@ -773,7 +782,7 @@ html, body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    z-index: 100; 
+    z-index: 100;
   }
   .icons-row .also-feature {
     display: -webkit-box;
