--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -377,14 +377,12 @@ html, body {
   user-select: none;
   width: 20px;
   height: 15px;
-  &::before {
-    top: 0;
-    @include transform(rotate(-45deg));
-  }
-  &::after {
-    bottom: 0;
-    @include transform(rotate(45deg));
-  }
+ }
+
+ .transform-bars {
+   .middle-bar {
+     display: none;
+   }
  }
 
 .mobile-toggle .top-bar, .mobile-toggle .middle-bar, .mobile-toggle .bottom-bar {
@@ -398,7 +396,9 @@ html, body {
   transition: transform .3s 0s ease-in-out,top .3s .3s ease-in-out;
   -webkit-transform-origin: 50% 50%;
   -ms-transform-origin: 50% 50%;
-  transform-origin: 50% 50%; }
+  transform-origin: 50% 50%;
+}
+
 
 .mobile-toggle .middle-bar {
   top: 6px;
