--- a/themes/default/layouts/reportaje.htm
+++ b/themes/default/layouts/reportaje.htm
@@ -35,7 +35,11 @@ code = "redes-sociales"
             $this['lang']='es';
         }
 
-        $this['reports'] = $this->staticApp->reportList();
+        //$this['reports'] = $this->staticApp->reportList();
+        
+        $this['numberReg'] = 2;
+        $this['numPag'] = ceil($this->staticApp->reportListCount()/$this['numberReg']);
+        $this['reports'] = $this->staticApp->reportListPag(1,$this['numberReg']);
 
         $this['urlPage'] = $this->page->url;
 
@@ -45,6 +49,17 @@ code = "redes-sociales"
             }
         }
 
+    }
+
+    function onPaginate(){
+        
+        $pag = $_POST['ipag'];
+        $numberReg = $_POST['inumberReg'];
+
+        $this['reports'] = $this->staticApp->reportListPag($pag,$numberReg);
+        return [
+            '#prtlReports' => $this->renderPartial('reports')
+        ];
     }
 
 ?>
@@ -77,11 +92,20 @@ code = "redes-sociales"
 
     {% component 'staticPage' %}
 
-    <div id='prtlPublications' class="all-events">
+    <div id='prtlReports' class="all-events">
         <div class="all-events-container">
         {% partial "reports" %}
         </div>
     </div>
+
+     <!-- Pagination -->
+    {% for i in 1..numPag %}
+        <form data-request="onPaginate">
+            <input type="hidden" name = "ipag" value="{{i}}">
+            <input type="hidden" name = "inumberReg" value="{{numberReg}}">
+            <button id="numPag{{i}}" class="btnNumPag" type="submit">{{i}}</button>           
+        </form>
+    {% endfor %}
 
     {% partial 'site/footer' %}
 
@@ -89,9 +113,11 @@ code = "redes-sociales"
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/script-select2.js"></script>
-<script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
+    <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
 
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
+
+    {% framework %}
 
   </body>
 </html>
