--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -383,6 +383,13 @@ html, body {
    .middle-bar {
      display: none;
    }
+   .top-bar {
+     transform: rotate(40deg);
+     top: 12px;
+   }
+   .bottom-bar {
+     transform: rotate(-40deg);
+   }
  }
 
 .mobile-toggle .top-bar, .mobile-toggle .middle-bar, .mobile-toggle .bottom-bar {
