--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -385,7 +385,7 @@ html, body {
    }
    .top-bar {
      transform: rotate(45deg);
-     top: 12px;
+     top: 12px !important;
    }
    .bottom-bar {
      transform: rotate(-45deg);
