--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -301,15 +301,60 @@ html, body {
   width: 20px;
   height: 15px; }
 
-.transform-bars .middle-bar {
-  display: none; }
+.bars {
+  display: block;
+  position: relative;
+  width: 20px;
+  height: 2px;
+  background-color: white;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease; }
+  .bars:before, .bars:after {
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    transition: all 0.2s ease; }
+  .bars:before {
+    top: 6px; }
+  .bars:after {
+    bottom: 6px; }
 
-.transform-bars .top-bar {
-  transform: rotate(45deg);
-  top: 12px !important; }
+.open .hamburger {
+  left: 282px !important;
+  position: fixed;
+  top: 27px !important; }
+  .open .hamburger .bars:before, .open .hamburger .bars:after {
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    background-color: black !important; }
 
-.transform-bars .bottom-bar {
-  transform: rotate(-45deg); }
+.open .hamburger .bars {
+  background-color: transparent;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease; }
+  .open .hamburger .bars::before {
+    top: 0;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg); }
+  .open .hamburger .bars::after {
+    bottom: 0;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg); }
 
 .mobile-toggle .top-bar, .mobile-toggle .middle-bar, .mobile-toggle .bottom-bar {
   width: 20px;
