--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -379,16 +379,52 @@ html, body {
   height: 15px;
  }
 
- .transform-bars {
-   .middle-bar {
-     display: none;
+ .bars {
+   display: block;
+   position: relative;
+   width: 20px;
+   height: 2px;
+   background-color: white;
+   @include transition($slowly);
+
+   &:before, &:after {
+     position: absolute;
+     content: " ";
+     width: 100%;
+     height: 2px;
+     background-color: white;
+     @include transition($slowly);
    }
-   .top-bar {
-     transform: rotate(45deg);
-     top: 12px !important;
+   &:before {
+     top: 6px;
    }
-   .bottom-bar {
-     transform: rotate(-45deg);
+   &:after {
+     bottom: 6px;
+   }
+ }
+ .open .hamburger {
+   left: 282px !important;
+   position: fixed;
+   top: 27px !important;
+   .bars {
+     &:before, &:after {
+         @include transition($slowly);
+         background-color: black !important;
+     }
+   }
+ }
+
+ .open .hamburger .bars {
+   background-color: transparent;
+   @include transition($slowly);
+
+   &::before {
+     top: 0;
+     @include transform(rotate(-45deg));
+   }
+   &::after {
+     bottom: 0;
+     @include transform(rotate(45deg));
    }
  }
 
