--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -292,7 +292,6 @@ html, body {
   padding: 0;
   vertical-align: middle;
   line-height: 16px;
-  text-align: right;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -306,7 +305,7 @@ html, body {
   position: relative;
   width: 20px;
   height: 2px;
-  background-color: white;
+  background-color: black;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   -ms-transition: all 0.2s ease;
@@ -316,7 +315,7 @@ html, body {
     content: " ";
     width: 100%;
     height: 2px;
-    background-color: white;
+    background-color: black;
     -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
     -ms-transition: all 0.2s ease;
