--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -369,7 +369,6 @@ html, body {
   padding: 0;
   vertical-align: middle;
   line-height: 16px;
-  text-align: right;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -384,7 +383,7 @@ html, body {
    position: relative;
    width: 20px;
    height: 2px;
-   background-color: white;
+   background-color: black;
    @include transition($slowly);
 
    &:before, &:after {
@@ -392,7 +391,7 @@ html, body {
      content: " ";
      width: 100%;
      height: 2px;
-     background-color: white;
+     background-color: black;
      @include transition($slowly);
    }
    &:before {
