--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -401,19 +401,9 @@ html, body {
      bottom: 6px;
    }
  }
- .open .hamburger {
-   left: 282px !important;
-   position: fixed;
-   top: 27px !important;
-   .bars {
-     &:before, &:after {
-         @include transition($slowly);
-         background-color: black !important;
-     }
-   }
- }
 
- .open .hamburger .bars {
+
+ .open .bars {
    background-color: transparent;
    @include transition($slowly);
 
