--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -325,30 +325,19 @@ html, body {
   .bars:after {
     bottom: 6px; }
 
-.open .hamburger {
-  left: 282px !important;
-  position: fixed;
-  top: 27px !important; }
-  .open .hamburger .bars:before, .open .hamburger .bars:after {
-    -webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -ms-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-    background-color: black !important; }
-
-.open .hamburger .bars {
+.open .bars {
   background-color: transparent;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   -ms-transition: all 0.2s ease;
   transition: all 0.2s ease; }
-  .open .hamburger .bars::before {
+  .open .bars::before {
     top: 0;
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -ms-transform: rotate(-45deg);
     transform: rotate(-45deg); }
-  .open .hamburger .bars::after {
+  .open .bars::after {
     bottom: 0;
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
