--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -283,6 +283,26 @@ html, body {
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg); }
 
+.pagination {
+  width: 100%;
+  position: relative;
+  background-color: white;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px; }
+  .pagination .btnNumPag {
+    background-color: transparent;
+    outline: none;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: 1px solid #CECECE; }
+
 /* NAVBAR TOGGLE & SLIDE-MENU */
 .mobile-toggle {
   display: inline-block;
