--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -360,6 +360,25 @@ html, body {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg); }
 
+
+.pagination {
+  width: 100%;
+  position: relative;
+  background-color: white;
+  @include flexbox();
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+  .btnNumPag {
+    background-color: transparent;
+    outline: none;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: 1px solid #CECECE;
+  }
+}
+
 /* NAVBAR TOGGLE & SLIDE-MENU */
 .mobile-toggle {
   display: inline-block;
