--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -294,7 +294,8 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 50px; }
+  padding-bottom: 50px;
+  margin-top: 0px; }
   .pagination .btnNumPag {
     background-color: transparent;
     outline: none;
