--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -370,6 +370,7 @@ html, body {
   justify-content: center;
   padding-bottom: 50px;
   margin-top: 0px;
+  margin-bottom: 0px;
   .btnNumPag {
     background-color: transparent;
     outline: none;
