--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -378,6 +378,8 @@ html, body {
     border-right: none;
     border-left: none;
     border-bottom: 1px solid #CECECE;
+    font-size: 16px;
+    color: #CECECE;
   }
 }
 
