--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -306,6 +306,9 @@ html, body {
     border-bottom: 1px solid #CECECE;
     font-size: 16px;
     color: #CECECE; }
+  .pagination .active {
+    color: #4A4A4A;
+    border-bottom: 1px solid #4A4A4A; }
 
 /* NAVBAR TOGGLE & SLIDE-MENU */
 .mobile-toggle {
